--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,35 @@
 {
-  "name": "upstatement/timber-starter-theme",
-  "description": "Starter theme to build a Timber theme",
+  "name": "davidrhoderick/shivermetimbers-theme",
+  "description": "Arrrr, this be a theme to start yuh off on yer travels!",
   "type":"wordpress-theme",
   "minimum-stability" : "stable",
   "authors": [
     {
-      "email": "jared@upstatement.com",
-      "name": "jarednova"
+      "email": "david@artlyitcalmedia.com",
+      "name": "davidrhoderick"
     }  
   ],
   "repositories": [
     {
       "type": "composer",
       "url": "https://wpackagist.org"
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "advanced-custom-fields/advanced-custom-fields-pro",
+        "version": "5.8.9",
+        "type": "wordpress-plugin",
+        "dist": {
+          "type": "zip",
+          "url": "http://connect.advancedcustomfields.com/index.php?t=5.8.9&p=pro&a=download&k=<%=acfprokey %>"
+        }
+      }
     }
   ],
   "require": {
-	  "timber/timber": "1.*"
+    "timber/timber": "1.*",
+    "advanced-custom-fields/advanced-custom-fields-pro": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "5.7.16|6.*"
