Fixing composer.json and functions.php to install ACF Pro and Timber.

--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,14 @@
       "package": {
         "name": "advanced-custom-fields/advanced-custom-fields-pro",
         "version": "5.8.9",
-        "type": "wordpress-plugin",
+        "type": "library",
         "dist": {
           "type": "zip",
-          "url": "http://connect.advancedcustomfields.com/index.php?t=5.8.9&p=pro&a=download&k=<%=acfprokey %>"
+          "url": "https://connect.advancedcustomfields.com/index.php?a=download&p=pro&k=<%= acfprokey %>&t=5.8.9"
+        },
+        "require": {
+          "composer/installers": "^1.4",
+          "ffraenz/private-composer-installer": "^4.0"
         }
       }
     }
